fixed spacing issues

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,13 +5,7 @@ html, body{
   padding: 0;
 }
 
-#navbarMobile{
-  display: none;
-  max-width: 100%;
-  height:5vh;
-  overflow: hidden;
-  background-color: green;
-}
+
 
 ul.navbar{
   list-style-type: none;
@@ -22,11 +16,11 @@ ul.navbar{
   text-align: center;
 }
 ul.navbar li{
-  display:inline-block
+  display:inline-block;
+  padding: 20px;
 }
 li a{
   color: white;
-  padding: 10px 15px;
   text-decoration: none;
 }
 
